--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,17 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_gray">#6f6f6f</color>
+
+
+    <color name="bg">#F6F6F6</color>
+    <color name="grayLight">#f6f8f9</color>
+    <color name="grayDark">#737980</color>
+    <color name="yellowLight">#faf6e9</color>
+    <color name="yellowDark">#b89b36</color>
+    <color name="red">#E91E63</color>
+    <color name="aqua">#00BCD4</color>
+    <color name="yellow">#FFC107</color>
+    <color name="green">#2fdf84</color>
+    <color name="light_green">#40FA5E</color>
 </resources>
