--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -82,6 +82,7 @@
         android:layout_gravity="start"
         android:id="@+id/nav_view"
         android:background="@color/green"
+        app:headerLayout="@layout/header_drawer_layout"
         app:menu="@menu/menu_drawer" />
 
 </com.example.noteappcleanarchitecture.presentation.advancedrawer.AdvanceDrawerLayout>
