--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -3,9 +3,27 @@
     <item
         android:id="@+id/profileFragment2"
         android:title="Profile"
-        android:icon="@drawable/ic_baseline_menu_24"/>
+        android:icon="@drawable/ic_baseline_person_24"/>
     <item
-        android:id="@+id/itemDelete"
-        android:title="@string/delete"
-        android:icon="@drawable/ic_baseline_menu_24"/>
+        android:id="@+id/settingFragment2"
+        android:title="@string/setting"
+        android:icon="@drawable/ic_baseline_settings_24"/>
+
+    <item
+        android:id="@+id/aboutUsFragment"
+        android:title="@string/about_us"
+        android:icon="@drawable/ic_baseline_category_24"/>
+
+    <item
+        android:id="@+id/privacyPolicyFragment"
+        android:title="@string/privacy"
+        android:icon="@drawable/ic_baseline_privacy_tip_24"/>
+
+    <item
+        android:id="@+id/exit"
+        android:title="@string/exit"
+        android:icon="@drawable/ic_baseline_exit_to_app_24"/>
+
+
+
 </menu>
