--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
             android:id="@+id/notesToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/white"
+            android:background="@color/toolbarColor"
             android:elevation="5dp"
             app:layout_constraintTop_toTopOf="parent"
             app:menu="@menu/menu_toolbar">
