add sharedPref for profile tablayout

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/backgroundColor"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.ui.ProfileFragment">
 
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/lastname"
-        android:textColor="@color/black"
+        android:textColor="@color/textColorBackground"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2" />
@@ -31,7 +31,7 @@
         android:minHeight="48dp"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
-        android:textColor="@color/black"
+        android:textColor="@color/textColorBackground"
         android:textColorHighlight="#54D4FF"
         android:textColorHint="#6E6E6E"
         android:textCursorDrawable="@drawable/text_cursor"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/mail"
-        android:textColor="@color/black"
+        android:textColor="@color/textColorBackground"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3" />
@@ -74,7 +74,7 @@
         android:minHeight="48dp"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
-        android:textColor="@color/black"
+        android:textColor="@color/textColorBackground"
         android:textColorHighlight="#54D4FF"
         android:textColorHint="#6E6E6E"
         android:textCursorDrawable="@drawable/text_cursor"
@@ -117,7 +117,7 @@
         android:minHeight="48dp"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
-        android:textColor="@color/black"
+        android:textColor="@color/textColorBackground"
         android:textColorHighlight="#54D4FF"
         android:textColorHint="#6E6E6E"
         android:textCursorDrawable="@drawable/text_cursor"
@@ -132,7 +132,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/firstname"
-        android:textColor="@color/black"
+        android:textColor="@color/textColorBackground"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName" />
@@ -144,7 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="@string/save"
-        android:textColor="@color/black"
+        android:textColor="@color/textColorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
@@ -158,7 +158,7 @@
         android:layout_marginTop="15dp"
         android:text="@string/change_photo"
         app:cornerRadius="15dp"
-        android:textColor="@color/black"
+        android:textColor="@color/textColorBackground"
         app:layout_constraintEnd_toEndOf="@+id/roundedImageView"
         app:layout_constraintStart_toStartOf="@+id/roundedImageView"
         app:layout_constraintTop_toBottomOf="@+id/roundedImageView" />
