--- a/app/src/main/res/drawable/radius_inputtext.xml
+++ b/app/src/main/res/drawable/radius_inputtext.xml
@@ -5,6 +5,6 @@
         android:radius="20dp"/>
     <stroke
         android:width="1dp"
-        android:color="@color/black"/>
+        android:color="@color/textColorBackground"/>
 
 </shape>
