--- a/app/src/main/res/layout/header_drawer_layout.xml
+++ b/app/src/main/res/layout/header_drawer_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:background="@color/green"
@@ -11,26 +12,34 @@
     android:paddingBottom="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:src="@android:drawable/sym_def_app_icon" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/profile_placeholder"
+        app:riv_corner_radius="20dp" />
 
     <TextView
+        android:id="@+id/tv_fullName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:gravity="start"
         android:paddingTop="8dp"
         android:text="Android Studio"
+        android:textAlignment="gravity"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textDirection="locale" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="android.studio@android.com"
-        android:textColor="@color/black" />
+        android:textAlignment="gravity"
+        android:textColor="@color/black"
+        android:textDirection="locale" />
 
 </LinearLayout>
