--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -34,7 +34,7 @@
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="10dp"
                 android:maxLines="1"
-                android:textColor="@color/black"
+                android:textColor="@color/textColorBackground"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
                 android:layout_marginEnd="15dp"
                 android:fontFamily="sans-serif-light"
                 android:lineSpacingExtra="5dp"
-                android:textColor="@color/black"
+                android:textColor="@color/textColorBackground"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/titleTxt"
