--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/backgroundColor"
     android:layout_height="match_parent"
     android:padding="16dp">
     <!--Close-->
@@ -79,7 +80,7 @@
                 android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:layout_margin="3dp"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/spinner_background"
                 app:cardCornerRadius="5dp"
                 app:cardElevation="1dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -119,7 +120,7 @@
                 android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:layout_margin="3dp"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/spinner_background"
                 app:cardCornerRadius="5dp"
                 app:cardElevation="1dp"
                 app:layout_constraintBottom_toBottomOf="parent"
