refactor note fragment darkmode

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="8dp"
             android:layout_weight="4"
             android:gravity="start"
-            android:textColor="@color/black"
+            android:textColor="@color/textColorBackground"
             android:textSize="16sp"
             android:text="@string/version" />
 
@@ -34,7 +34,7 @@
             android:layout_marginEnd="16dp"
             android:layout_weight="1"
             android:gravity="end"
-            android:textColor="@color/black"
+            android:textColor="@color/textColorBackground"
             android:textSize="16sp"
             android:text="1.0.1" />
 
@@ -45,7 +45,7 @@
         android:layout_height="1dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/lightGray"/>
+        android:background="@color/viewColorBackground"/>
 
     <LinearLayout
         android:id="@+id/ll_darkMode"
@@ -61,7 +61,7 @@
             android:layout_gravity="start"
             android:layout_marginStart="8dp"
             android:layout_weight="4"
-            android:textColor="@color/black"
+            android:textColor="@color/textColorBackground"
             android:textSize="16sp"
             android:text="@string/version" />
 
@@ -79,7 +79,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/lightGray"/>
+        android:background="@color/viewColorBackground"/>
 
     <LinearLayout
         android:id="@+id/ll_changeLanguage"
@@ -95,7 +95,7 @@
             android:layout_gravity="start"
             android:layout_marginStart="8dp"
             android:layout_weight="4"
-            android:textColor="@color/black"
+            android:textColor="@color/textColorBackground"
             android:textSize="16sp"
             android:text="@string/version" />
 
@@ -106,10 +106,11 @@
             android:layout_marginEnd="16dp"
             android:layout_weight="1"
             android:gravity="end"
-            android:textColor="@color/black"
+            android:textColor="@color/textColorBackground"
             android:textSize="16sp"
-            android:text="1.0.1" />
+            android:text="1.0.0" />
 
     </LinearLayout>
+
 
 </LinearLayout>
