--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,7 @@
     <color name="light_green">#40FA5E</color>
     <color name="toolbarColor">@color/white</color>
     <color name="backgroundColor">@color/white</color>
-    <color name="dark_green">@color/yellowDark</color>
+    <color name="dark_green">@color/yellowLight</color>
     <color name="category_background">@color/grayLight</color>
     <color name="spinner_background">@color/white</color>
     <color name="textColorBackground">@color/black</color>
