--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:srcCompat="@drawable/youtubelogo" />
+        app:srcCompat="@drawable/home" />
 
     <TextView
         android:id="@+id/textView13"
@@ -53,7 +53,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:srcCompat="@drawable/instagramlogo" />
+        app:srcCompat="@drawable/home" />
 
     <TextView
         android:id="@+id/textView12"
@@ -87,7 +87,7 @@
 
     <include
         android:id="@+id/include3"
-        layout="@layout/empty_appbar"
+        layout="@layout/header_drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -130,9 +130,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:contentDescription="@string/telgram"
-        android:src="@drawable/telegramlogo"
+        android:src="@drawable/home"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
-        app:srcCompat="@drawable/telegramlogo" />
+        app:srcCompat="@drawable/home" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
