--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.ui.SplashScreenFragment">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="316dp"
-        android:layout_height="419dp"
-        android:src="@drawable/note_image"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:src="@drawable/note_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
