--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.ui.SplashScreenFragment">
+    tools:context=".presentation.ui.splash.SplashScreenFragment">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="300dp"
